[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/Battle/StateUI.gd" type="Script" id=1]
[ext_resource path="res://font/font_siteName.tres" type="DynamicFont" id=2]

[node name="StateUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 125.0
margin_top = 55.0
margin_right = 481.0
margin_bottom = 102.0

[node name="hpBar" type="ColorRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.835294, 0.317647, 0.317647, 1 )

[node name="shieldBar" type="ColorRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 261.0
margin_right = -1.0
color = Color( 0.831373, 0.768627, 0.403922, 0.760784 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 125.0
margin_top = 121.0
margin_right = 481.0
margin_bottom = 168.0

[node name="mpBar" type="ColorRect" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.294118, 0.286275, 1, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 52.0
margin_top = 63.0
margin_right = 92.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "hp:"

[node name="hpLabel" type="Label" parent="."]
margin_left = 249.0
margin_top = 66.0
margin_right = 343.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 2
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 2
text = "100/100"
align = 1
valign = 1

[node name="shieldLabel" type="Label" parent="."]
margin_left = 386.0
margin_top = 65.0
margin_right = 467.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 2
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 2
text = "20"
align = 2
valign = 1

[node name="mpLabel" type="Label" parent="."]
margin_left = 249.0
margin_top = 131.0
margin_right = 343.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 2
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 2
text = "100/100"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 55.0
margin_top = 131.0
margin_right = 102.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 2 )
text = "mp:"

